--- a/irctc_autofill_extension/IRCTC Autofill/popup.html
+++ b/irctc_autofill_extension/IRCTC Autofill/popup.html
@@ -36,11 +36,11 @@
         <div class="card-body">
          
           <div class="w-full flex flex-col">
-            <label class="form-label" for="irctc-login"> IRCTC Login username </label>
+            <label class="form-label" for="irctc-login">Login username </label>
             <input id="irctc-login" class="form-control" name="irctc-login" type="text" />
           </div>
           <div class="w-full flex flex-col">
-            <label class="form-label" for="irctc-password"> IRCTC Login password </label>
+            <label class="form-label" for="irctc-password">Login password </label>
             <input id="irctc-password" class="form-control"  name="irctc-password" type="password" />
           </div>
         </div> 
